[package]
name = "bitcoin-bencher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
env_logger = "0.11.3"
exitcode = "1.1.2"
log = "0.4.21"
procfs = "0.16.0"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
which = "6.0.1"
